charts/synapse/tests/golden/fixtures/test-admin-ingress-tls.golden.yaml
---
# Source: synapse/templates/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-admin
  
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - NOT-CONFIGURED
      secretName: admin-tls
  rules:
    - host: NOT-CONFIGURED
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 80
